--- a/Prototype_VoZeMan/src/view/prototype2.fxml
+++ b/Prototype_VoZeMan/src/view/prototype2.fxml
@@ -67,18 +67,18 @@
                   <Font size="67.0" />
                </font>
             </Label>
-            <HBox fx:id="mainWindowForNotes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="680.0" visible="false">
+            <HBox fx:id="mainWindowForNotes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="680.0">
                <children>
                   <VBox fx:id="vBoxForNotesWindowListView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="238.0">
                      <children>
                         <ListView fx:id="notesWindowListView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#notesWindowShowNote" prefHeight="600.0" prefWidth="228.0">
                            <VBox.margin>
-                              <Insets right="10.0" />
+                              <Insets />
                            </VBox.margin>
                         </ListView>
                      </children>
                   </VBox>
-                  <VBox fx:id="vBoxForNotesWindowEditArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="442.0">
+                  <VBox fx:id="vBoxForNotesWindowEditArea" alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="442.0">
                      <children>
                         <TextField fx:id="notesWindowTextField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyTyped="#noteTextChanged" prefHeight="40.0" prefWidth="442.0">
                            <font>
@@ -120,7 +120,7 @@
                         <Insets />
                      </VBox.margin>
                   </TextField>
-                  <TextArea fx:id="notesTextArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="280.0" promptText="Notiz">
+                  <TextArea fx:id="notesTextArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="280.0" promptText="Notiz">
                      <VBox.margin>
                         <Insets top="5.0" />
                      </VBox.margin>
@@ -138,7 +138,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ListView fx:id="notesListview" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#showNote" prefHeight="210.0" prefWidth="280.0">
+                  <ListView fx:id="notesListview" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#showNote" prefHeight="225.0" prefWidth="280.0">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
