--- a/Prototype_VoZeMan/bin/view/prototype2.fxml
+++ b/Prototype_VoZeMan/bin/view/prototype2.fxml
@@ -121,13 +121,13 @@
             </Pane>
             <Pane fx:id="mainWindowForMensa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="680.0">
                <children>
-                  <WebView fx:id="mensaWindowWebView" minHeight="-Infinity" minWidth="-Infinity" prefWidth="680.0" />
+                  <ImageView fx:id="mensaWindowImageView" fitHeight="600.0" fitWidth="680.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
             <Pane fx:id="mainWindowForSettings" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="680.0">
                <children>
-                  <TextField fx:id="raplaLinkTextField" layoutX="225.0" layoutY="70.0" prefHeight="25.0" prefWidth="434.0" />
-                  <Label fx:id="raplaLinkEintragenLabel" layoutX="18.0" layoutY="68.0" prefHeight="30.0" prefWidth="149.0" text="Hier Rapla-Link eintragen:" />
+                  <TextField fx:id="raplaWindowTextField" layoutX="225.0" layoutY="70.0" prefHeight="25.0" prefWidth="434.0" />
+                  <Label fx:id="raplaWindowEintragenLabel" layoutX="18.0" layoutY="68.0" prefHeight="30.0" prefWidth="149.0" text="Hier Rapla-Link eintragen:" />
                </children>
             </Pane>
          </children>
